Bug 275265 - Cover manager dosen't show search result for Google and Yahoo
Summary: Cover manager dosen't show search result for Google and Yahoo
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Tools/Cover Manager (other bugs)
Version First Reported In: 2.4.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.4.2
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-09 09:43 UTC by Emanuele Cisotti
Modified: 2011-07-03 11:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emanuele Cisotti 2011-06-09 09:43:08 UTC
Version:           2.4.0 (using KDE 4.5.3) 
OS:                Linux

Till some weeks my Amarok won't find any cover if I use Google or Yahoo to search.

Reproducible: Didn't try

Steps to Reproduce:
New Amarok installation.
Right click on an album.
Album > Download Cover
Try to search for a cover on Google.

Actual Results:  
Nothing is shown

Expected Results:  
A lot of results with Google Images

OS: Linux (i686) release 2.6.32-33-generic
Compiler: cc
Comment 1 Myriam Schweingruber 2011-06-09 11:39:08 UTC
Could you please test with Amarok 2.4.1? Could you also please run Amarok from a command line with -d --nofork as options and give us the part when you try to check for covers?
Comment 2 Emanuele Cisotti 2011-06-09 14:15:04 UTC
This is the output:
marok: BEGIN: virtual void Playlist::PrettyListView::contextMenuEvent(QContextMenuEvent*) 
amarok:   BEGIN: void Playlist::ViewCommon::trackMenu(QWidget*, const QModelIndex*, const QPoint&) 
amarok:     [CoverFetcher] "Adding interactive cover fetch for: 'Scantraxx Radioshow 8 Sampler WEB' from Google" 
amarok:     BEGIN: CoverFoundDialog::CoverFoundDialog(KSharedPtr<CoverFetchUnit>, const CoverFetch::Metadata&, QWidget*) 
amarok:     END__: CoverFoundDialog::CoverFoundDialog(KSharedPtr<CoverFetchUnit>, const CoverFetch::Metadata&, QWidget*) [Took: 0.013s] 
amarok:     [CoverFetcher] "Queueing cover fetch query: 'Scantraxx Radioshow 8 Sampler WEB' (page 0)" 
amarok:   END__: void Playlist::ViewCommon::trackMenu(QWidget*, const QModelIndex*, const QPoint&) [Took: 1.4s] 
amarok: END__: virtual void Playlist::PrettyListView::contextMenuEvent(QContextMenuEvent*) [Took: 1.4s]


I can't try Amarok 2.4.1 because I can't find any repository for Ubuntu 10.10 with Amarok 2.4.1
Comment 3 Rick W. Chen 2011-06-09 14:29:02 UTC
The problem with Google was fixed in ebe78a46acc6ae42e1472b0d7f837eacb29b5bd3 (not tagged yet), also reported in Bug 274569. Though it seems just today some futher changes on Google's side broke the search again. I've another patch for it and I'll push it in a few days hopefully.

I have not experienced any problems with the Yahoo fetcher though, ever since it was added. Also I can't recall any code changes to it since then either. Sometimes it may be some characters that should be encoded into the url but somehow isn't. Can you try with just searching with some simple texts and see if that works?
Comment 4 Emanuele Cisotti 2011-06-09 14:38:07 UTC
I never used Yahoo before today, so I think it was broken. I tried with simple words and it worked.
Will it be any way to patch the Google search or I have to wait to upgrade di Ubuntu 11.04 and install Amarok 2.4.2
Comment 5 Rick W. Chen 2011-07-03 11:02:16 UTC
Git commit 44e5ea01464f05082a64074291a6702973189a4d by Rick W. Chen.
Committed on 09/06/2011 at 14:15.
Pushed by rickc into branch 'master'.

Fix google cover fetching

BUG: 275265
FIXED-IN: 2.4.2

M  +1    -0    ChangeLog     
M  +1    -1    src/covermanager/CoverFetchUnit.cpp     

http://commits.kde.org/amarok/44e5ea01464f05082a64074291a6702973189a4d