Fix google cover fetching

BUG: 275265
FIXED-IN: 2.4.2